--- a/Games Temp/ass3.css
+++ b/Games Temp/ass3.css
@@ -3,10 +3,13 @@
     margin: 0;
 }
 body{
-    background: linear-gradient(45deg, #132743, #5585b5);
+    background: linear-gradient(45deg, #becad5, #eff4f8);
     background-size: 100%;
     
     
+}
+body::-webkit-scrollbar{
+  display: none;
 }
    
 .nav {
@@ -19,9 +22,9 @@ body{
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(78, 72, 72, 0.5);
     right: 0;
-    transition: 2s;
+    transition: 1s;
   }
 
   .nav a {
@@ -30,6 +33,7 @@ body{
     text-decoration: none;
     font-size: 20px;
     color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
     
   }
@@ -57,7 +61,7 @@ nav ul ul{
     padding-bottom: 20px;
     width: 150px;
     top: 0;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(78, 72, 72, 0.5);
     border-radius: 15px;
     opacity: 0;
     transition-duration: 1s;
@@ -127,28 +131,30 @@ ul .dropdown:hover ul{
     text-align: center;
 }
 .titlee h3{
-    font-family: Georgia, 'Times New Roman', Times, serif, Times, serif;
-    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
 }
 .titlee p{
     font-family: Arial, Helvetica, sans-serif, Times, serif;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 200;
 }
 .titlee .button1{
-    width: 100px;
-    height: 40px;
+    width: 120px;
+    height: 60px;
     border-radius: 10px;
     border-color: #f70776;
-    font-size: 15px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: rgba(0, 0, 0, 0.1);
-    color: white;
+    color: #f70776;
 
 }
 
 .button1:hover{
     background-color:#f70776 ;
-
+cursor: pointer;
+color: white;
 }
 
 .nav:hover{
@@ -176,20 +182,20 @@ ul .dropdown:hover ul{
     justify-content: center;
 }
 .gameplay span{
-    color: white;
+    color: rgb(80, 45, 45);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     
     font-size: 50px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .gameplay span::after{
     content: '';
     height: 3px;
     width: 350px;
-    background: rgb(207, 45, 99);}
+    background: rgb(57, 50, 52);}
 
 
 .imagee{
@@ -222,7 +228,7 @@ ul .dropdown:hover ul{
     width: 100%;
     right: 0%;
     top: 50%;
-    background: linear-gradient(90deg, rgba(247, 7, 118, 0.7), black);
+    background: linear-gradient(90deg, rgba(7, 7, 7, 0.7), black);
  
     transition: 3s;
   }
@@ -234,7 +240,7 @@ ul .dropdown:hover ul{
     width: 100%;
     right: 0%;
     bottom: 50%;
-    background: linear-gradient(90deg, rgba(247, 7, 118, 0.7), black);
+    background: linear-gradient(90deg, rgba(7, 7, 7, 0.7), black);
   
     transition: 3s;
   }
@@ -286,7 +292,7 @@ ul .dropdown:hover ul{
     
 }
 .racing span{
-    color: white;
+    color: rgb(80, 45, 45);
     font-size: 50px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: flex;
@@ -299,7 +305,7 @@ ul .dropdown:hover ul{
     content: '';
     height: 3px;
     width: 300px;
-    background: rgb(207, 45, 99);
+    background: rgb(53, 40, 44);
 
 }
 
@@ -324,7 +330,7 @@ ul .dropdown:hover ul{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(142, 30, 88,.5);
+    background-color: rgba(5, 4, 5, 0.8);
     overflow: hidden;
     width: 100%;
     height: 0;
@@ -401,7 +407,7 @@ background-color: transparent;
         
     }
     .zombie span{
-        color: white;
+        color: rgb(80, 45, 45);
         font-size: 50px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         display: flex;
@@ -414,7 +420,7 @@ background-color: transparent;
         content: '';
         height: 3px;
         width: 300px;
-        background: rgb(207, 45, 99);
+        background: rgb(40, 26, 31);
     }
     
     .zimage{
@@ -437,7 +443,7 @@ background-color: transparent;
         left: 0;
         right: 0;
         /* background-color: #8e1e58; */
-        background-color: rgba(142, 30, 88,.5);
+        background-color: rgba(6, 5, 5, 0.8);
         overflow: hidden;
         width: 100%;
         height: 0;
@@ -500,6 +506,14 @@ background-color: transparent;
             padding-top: 20px;
         
         }
+
+        .contacts p{
+          font-family: Georgia, 'Times New Roman', Times, serif;
+          font-size: 20px;
+          color: rgb(250, 24, 24);
+          padding-top: 30px;
+          text-align: center;
+        }
         .pcont{
             text-align: center;
             font-size: 50px;
@@ -536,12 +550,140 @@ background-color: transparent;
             font-weight: bold;
             background-color: rgb(224, 219, 219);
         }
+.sendbtn:hover{
+  cursor: pointer;
+  background-color: dodgerblue;
+}
 
 
 
+        .bannner{
+            position: relative;
+        }
+        .titlee{
+            position: absolute;
+            top: 40%;
+            left: 20%;
+            color: #816b6b;
+        }
+        #particles-js{
+            background-color: rgb(241, 217, 217);
+        }
+
+.loading{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: black;
+    z-index: 99999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+body{
+    overflow: hidden;
+}
+.lds-spinner {
+    color: official;
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-spinner div {
+    transform-origin: 40px 40px;
+    animation: lds-spinner 1.2s linear infinite;
+  }
+  .lds-spinner div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 3px;
+    left: 37px;
+    width: 6px;
+    height: 18px;
+    border-radius: 20%;
+    background: #dc5a5a;
+  }
+  .lds-spinner div:nth-child(1) {
+    transform: rotate(0deg);
+    animation-delay: -1.1s;
+  }
+  .lds-spinner div:nth-child(2) {
+    transform: rotate(30deg);
+    animation-delay: -1s;
+  }
+  .lds-spinner div:nth-child(3) {
+    transform: rotate(60deg);
+    animation-delay: -0.9s;
+  }
+  .lds-spinner div:nth-child(4) {
+    transform: rotate(90deg);
+    animation-delay: -0.8s;
+  }
+  .lds-spinner div:nth-child(5) {
+    transform: rotate(120deg);
+    animation-delay: -0.7s;
+  }
+  .lds-spinner div:nth-child(6) {
+    transform: rotate(150deg);
+    animation-delay: -0.6s;
+  }
+  .lds-spinner div:nth-child(7) {
+    transform: rotate(180deg);
+    animation-delay: -0.5s;
+  }
+  .lds-spinner div:nth-child(8) {
+    transform: rotate(210deg);
+    animation-delay: -0.4s;
+  }
+  .lds-spinner div:nth-child(9) {
+    transform: rotate(240deg);
+    animation-delay: -0.3s;
+  }
+  .lds-spinner div:nth-child(10) {
+    transform: rotate(270deg);
+    animation-delay: -0.2s;
+  }
+  .lds-spinner div:nth-child(11) {
+    transform: rotate(300deg);
+    animation-delay: -0.1s;
+  }
+  .lds-spinner div:nth-child(12) {
+    transform: rotate(330deg);
+    animation-delay: 0s;
+  }
+  @keyframes lds-spinner {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
 
 
 
-
-
-
+  #myBtn {
+    display: none; 
+    position: fixed; 
+    font-size: 20px; 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(80, 71, 71, 0.5) ;
+    color: white; 
+    bottom: 10px; 
+    z-index: 999; 
+    right: 10px; 
+  border-color: white; 
+    cursor: pointer; 
+    padding: 25px; 
+    border-radius: 20px; 
+   
+  }
+  
+  #myBtn:hover {
+    background-color: rgb(6, 6, 6, 0.8);
+  }
